all product show sec com

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://marketplace.canva.com/EAGFNmKiY9s/1/0/1600w/canva-blue-soccer-sports-logo-rQrjayPQsF0.jpg" />
+    <link rel="icon" type="image/svg+xml" href="https://i.ibb.co.com/tTNpGcPj/canva-blue-soccer-sports-logo-r-Qrjay-PQs-F0-removebg-preview.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IronGrip Sports</title>
   </head>
